# MWEKF

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  \  cone_history.json  data_loader.py  delta_and_heading  feb.bash  feb_installation.bash  feb_lidar_setup.bash  local_cone_history.json  nlp_hess_l.casadi  out.txt  plot.py  sim_data.txt  starter.sh  time_gaps.txt
.github/workflows/: super-linter.yml
DocsOutput/doctrees/: environment.pickle  index.doctree
DocsOutput/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
all_settings/all_settings/: package.xml  setup.cfg  setup.py
camera_only/: CMakeLists.txt  package.xml  setup.cfg  setup.py  test2.py
camera_only/camera_only/: NotCvBridge.py  camera_node.py  cone_distance.py  cone_distance_calculator.py  cone_node.py  depth_aligner.py  depth_anything_camera_only.py  find_cone_cluster.py  logitech_camera_publisher.py  main.py  model_operations.py  pixel_depth_estimation.py  (+3 more)
casadi_src/: casadi_installer.sh
docs/: conf.py  global_path.rst  graphslam_global.rst  index.rst  local_path.rst  messages.rst  modules.rst  mpc.rst
dynamics/: __init__.py  dynamics.py
feb_msgs/: CMakeLists.txt  package.xml
global_path/: package.xml  setup.py
launch/: perception_launch.py  pnc_launch.py
lidar_perception/: package.xml  setup.py
local_path/: setup.cfg  setup.py
microcontroller/: setup.py
mpc/: setup.py
perception_sim/: package.xml  setup.cfg  setup.py
pnc_ws/: first_lap_opt_compiled.py  local_opt.c
racecar_bringup/: CMakeLists.txt  package.xml
requirements/: apt.txt  pip.txt
sensor_fusion/: NotCvBridge.py  camera_publisher.py
sensor_fusion/Extrinsic_Camera_Calibration/src/lidar_camera_calibration/: CMakeLists.txt  README.md  package.xml  setup.py
sensor_fusion/Extrinsic_Camera_Calibration/src/lidar_camera_calibration/launch/: camera_calibration.launch.py  display_camera_calibration.launch.py  display_camera_lidar_calibration.launch.py  play_rosbag.launch.py
sensor_fusion/Extrinsic_Camera_Calibration/src/lidar_camera_calibration/scripts/: calibrate_camera_lidar.py  calibrate_camera_lidar3.py  file_operations.py  model_operations.py  point_3d_extractor.py  test_projection.py  test_ransac.py  update_camera_info.py
sensor_fusion/Extrinsic_Camera_Calibration/src/lidar_camera_calibration/utilities/: coord2dsave.txt  coord3dsave.txt  coordinates_2d.txt  coordinates_3d.txt  extrinsics.npz  intrinsic_parameters.txt  logitech_extrinsics.npz  logitech_intrinsic_parameters.txt  realsense_extrinsics.npz  realsense_intrinsic_parameters.txt  test.py
source/: conf.py  index.rst
(+240 files in other folders)
